<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:layout_marginBottom="481dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="219dp"
        android:ems="10"
        android:hint="@string/ed1"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/button"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="151dp"
        android:background="@drawable/fondoboton"
        android:onClick="Jugar"
        android:text="@string/jugar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="49dp"
        android:background="@drawable/fondoet"
        android:gravity="clip_horizontal|center|center_horizontal" />
</RelativeLayout>